update order and payment to use queue